--- a/source/MikValSor.EnsuredImmutable/MikValSor.EnsuredImmutable.csproj
+++ b/source/MikValSor.EnsuredImmutable/MikValSor.EnsuredImmutable.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net45;</TargetFrameworks>
     <RootNamespace>MikValSor.Immutable</RootNamespace>
@@ -18,6 +17,7 @@
     <Version>1.0.2</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <PackageReleaseNotes>v1.0.2
 - Fixed missing documentation
 
@@ -28,30 +28,8 @@ v1.0.1
 v1.0.0
 - Initial release</PackageReleaseNotes>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-    <DocumentationFile>bin\Debug\netstandard2.0\MikValSor.EnsuredImmutable.xml</DocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-    <DocumentationFile>bin\Release\netstandard2.0\MikValSor.EnsuredImmutable.xml</DocumentationFile>
-  </PropertyGroup>
-  
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net45|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-    <DocumentationFile>bin\Debug\net45\MikValSor.EnsuredImmutable.xml</DocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net45|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-    <DocumentationFile>bin\Release\net45\MikValSor.EnsuredImmutable.xml</DocumentationFile>
-  </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="MikValSor.ImmutableValidator" Version="1.0.9" />
     <PackageReference Include="MikValSor.SerializableValidator" Version="1.0.4" />
   </ItemGroup>
-
 </Project>
